--- a/WebXR/index.html
+++ b/WebXR/index.html
@@ -28,7 +28,7 @@
     <script src="Build/UnityLoader.js"></script>
     <script>
         UnityLoader.SystemInfo.mobile = false;  // Workaround to force `UnityLoader` to actually load on mobile.
-        window.gameInstance = UnityLoader.instantiate('gameContainer', 'Build/online.json', {
+        window.gameInstance = UnityLoader.instantiate('gameContainer', 'Build/WebXR.json', {
           Module: {
             // `preserveDrawingBuffer` is needed for WebVR content to be mirrored to the `<canvas>`.
             webglContextAttributes: {
@@ -73,10 +73,22 @@
       </div>
     </div>
 
-    <button id="enterxr" value="Enter VR"></button>
-
+    <button class="entervr" id="entervr" value="Enter VR" disabled></button>
+	<!-- 
+	<button class="enterar" id="enterar" value="Enter AR" disabled>AR</button>
+	-->
     <div id="performance" data-enabled="false"></div>
-
+    <script>
+      let enterVRButton = document.getElementById('entervr');
+      
+      document.addEventListener('onVRSupportedCheck', function (event) {
+        enterVRButton.disabled = !event.detail.supported;
+      }, false);
+      
+      enterVRButton.addEventListener('click', function (event) {
+        document.dispatchEvent(new CustomEvent('toggleVR', {}));
+      }, false);
+    </script>
     <script src="vendor/gl-matrix-min.js"></script>
     <script src="webxr.js"></script>
   </body>
