--- a/Sample/index.html
+++ b/Sample/index.html
@@ -33,16 +33,24 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <button class="entervr" id="entervr" value="Enter VR" disabled>VR</button>
+        <button class="enterar" id="enterar" value="Enter AR" disabled>AR</button>
         <div class="title">Unity-WebXR-Export</div>
       </div>
     </div>
     <script>
+      let enterARButton = document.getElementById('enterar');
       let enterVRButton = document.getElementById('entervr');
       
+      document.addEventListener('onARSupportedCheck', function (event) {
+        enterARButton.disabled = !event.detail.supported;
+      }, false);
       document.addEventListener('onVRSupportedCheck', function (event) {
         enterVRButton.disabled = !event.detail.supported;
       }, false);
       
+      enterARButton.addEventListener('click', function (event) {
+        document.dispatchEvent(new CustomEvent('toggleAR', {}));
+      }, false);
       enterVRButton.addEventListener('click', function (event) {
         document.dispatchEvent(new CustomEvent('toggleVR', {}));
       }, false);
